objects/copado1p__Platform_Job_Execution__c.object
<CustomObject>
    <description>This object is used to track every C1P job execution, one will be created per each request.</description>
    <fields>
        <fullName>Job_Cost__c</fullName>
        <description>Job Cost Calculation Based on Dyno Standard 2X Cost Per Second</description>
        <formula>copado1p__Elapsed_Time_Seconds__c * 0.00001902587</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation Based on Dyno Standard 2X Cost Per Second</inlineHelpText>
        <label>Job Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>copado1p__Copado_Job_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>This job Id is returned by Copado when an execution is started.</inlineHelpText>
        <label>Copado Job ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado1p__Elapsed_Time_Seconds__c</fullName>
        <formula>ROUND(
 (copado1p__End_Date__c - copado1p__Start_Date__c) * 24 * 60 * 60, 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado1p__Elapsed_Time__c</fullName>
        <formula>IF(
 copado1p__End_Date__c - copado1p__Start_Date__c &gt; 0 ,
 TEXT( FLOOR( copado1p__End_Date__c - copado1p__Start_Date__c ) ) &amp; &quot; days &quot; &amp; 
 TEXT( FLOOR( MOD( (copado1p__End_Date__c - copado1p__Start_Date__c ) * 24, 24 ) ) ) &amp; &quot; hours &quot; &amp; 
 TEXT( ROUND( MOD( (copado1p__End_Date__c - copado1p__Start_Date__c ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;, 
 &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado1p__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado1p__Platform_Job__c</fullName>
        <label>Platform Job</label>
        <referenceTo>copado1p__Platform_Job__c</referenceTo>
        <relationshipLabel>Platform Job Executions</relationshipLabel>
        <relationshipName>Platform_Job_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado1p__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado1p__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Starting</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado1p__isFinished__c</fullName>
        <formula>OR(
 ISPICKVAL(copado1p__Status__c, &quot;Success&quot;),
 ISPICKVAL(copado1p__Status__c, &quot;Failure&quot;)
)</formula>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <label>Platform Job Execution</label>
    <nameField>
        <displayFormat>PJE-{00000}</displayFormat>
        <label>Platform Job Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Job Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>